fixed footer alignment

--- a/styles/home.css
+++ b/styles/home.css
@@ -77,11 +77,11 @@
 }
 
 #one {
-    left: 23.5%;
+    left: 26%;
 }
 
 #two {
-   left: 32.5%;
+   left: 35%;
 }
 
 #three {
